Adiciona ligação entre serviço e disponibilidade